--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "leaflet": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-leaflet": "^2.8.2",
     "gh-pages": "^4.0.0"
   }
 }
